; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_clist.c_test_SHLWAPI_212.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_clist.c_test_SHLWAPI_212.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dummystream = type { i64, i32, i64, i32 }

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"failed Write()\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"called Read()\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"wrong call count\0A\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"called Seek()\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_SHLWAPI_212 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_SHLWAPI_212() #0 {
  %1 = alloca %struct.dummystream, align 8
  %2 = alloca [256 x i8], align 16
  %3 = alloca i64, align 8
  %4 = call i32 @InitDummyStream(%struct.dummystream* %1)
  %5 = getelementptr inbounds %struct.dummystream, %struct.dummystream* %1, i32 0, i32 3
  %6 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %7 = call i64 @pSHLWAPI_212(i32* %5, i8* %6, i32 256)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @S_OK, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @ok(i32 %11, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %13 = getelementptr inbounds %struct.dummystream, %struct.dummystream* %1, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %18 = getelementptr inbounds %struct.dummystream, %struct.dummystream* %1, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = icmp eq i32 %19, 1
  %21 = zext i1 %20 to i32
  %22 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %23 = getelementptr inbounds %struct.dummystream, %struct.dummystream* %1, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = icmp eq i64 %24, 0
  %26 = zext i1 %25 to i32
  %27 = call i32 @ok(i32 %26, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  ret void
}

declare dso_local i32 @InitDummyStream(%struct.dummystream*) #1

declare dso_local i64 @pSHLWAPI_212(i32*, i8*, i32) #1

declare dso_local i32 @ok(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
